more-details nav-bar changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
+
 html {
   background: orange;
 }
@@ -7,18 +9,18 @@ html {
 }
 /* NAVBAR Lines 12 - 63 */
 .nav-bar {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
 }
 nav {
   display: flex;
-  position: fixed;
   background-color: black;
   color: white;
   width: 95vw;
   border-radius: 5px;
   font-family: "Luckiest Guy";
   margin-top: 3em;
+  margin-left: 3em;
   align-items: center;
   justify-content: space-between;
 }
@@ -139,12 +141,13 @@ nav h5 {
   height: 25em;
 }
 .youtube-vid{
+  display: flex;
   align-self: flex-end;
 }
 
 .sec-1{
   display: flex;
-  font-family: "Luckiest Guy";
+  font-family: "Racing Sans One";
 }
 
 .col-2{
@@ -152,4 +155,11 @@ nav h5 {
   flex-direction: column;
   width: 60em;
   margin-left: 4em;
+}
+
+.character-images{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
