--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @keyframes tonext {
   75% {
-    left: 0;
+    left: 100em;
   }
   95% {
     left: 100%;
@@ -15,10 +15,10 @@
 
 @keyframes tostart {
   75% {
-    left: 0;
+    left: 100%;
   }
   95% {
-    left: -300%;
+    left: -200%;
   }
   98% {
     left: -300%;
@@ -46,16 +46,14 @@
 ol, li {
   list-style: none;
   margin: 0;
-  padding: 0;
 }
 
 .carousel {
   position: relative;
-  padding-top: 40%;
+  padding-top: 25%;
   filter: drop-shadow(0 0 10px #0003);
   perspective: 100px;
   overflow: hidden;
-  bottom: 10em;
 }
 
 .carousel__viewport::-webkit-scrollbar{
@@ -70,25 +68,34 @@ ol, li {
   left: 0;
   display: flex;
   overflow-x: scroll;
-  counter-reset: item;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
+  padding: 0;
 }
 
 .carousel__slide {
   position: relative;
   flex: 0 0 100%;
   width: 100%;
-  background-color: #f99;
-  counter-increment: item;
 }
 
-.carousel__slide:nth-child(even) {
-  background-color: #99f;
+#carousel__slide1{
+  background: url('https://i.pinimg.com/originals/c3/76/47/c37647d3cd724c0dc86a7db7627eaba5.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  justify-content: center;
+}
+#carousel__slide2{
+  background: url('https://i.pinimg.com/originals/16/65/a7/1665a7ae96ba9e767182d472c8f4f52e.jpg');
+}
+#carousel__slide3{
+  background: url('https://i.pinimg.com/originals/99/4e/53/994e5335b9e54a2bdee1077049c7d653.jpg');
+}
+#carousel__slide4{
+  background: url('https://wallpapercave.com/wp/wp2771912.jpg');
 }
 
 .carousel__slide:before {
-  content: counter(item);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -123,7 +130,6 @@ ol, li {
   right: 0;
   bottom: 0;
   left: 0;
-  text-align: center;
 }
 
 .carousel__navigation-list,
@@ -133,9 +139,9 @@ ol, li {
 
 .carousel__navigation-button {
   display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: #333;
+  width: 1rem;
+  height: 1rem;
+  background-color: rgba(78, 76, 76, 0.404);
   background-clip: content-box;
   border: 0.25rem solid transparent;
   border-radius: 50%;
@@ -212,13 +218,5 @@ form{
   padding: 20px 33%;
   justify-content:center;
   align-items:center;
-}
-
-form input{
-  margin: 10px;
-  font-size:15px;
-  border-radius: 10px;
-  padding: 10px;
-  outline:none;
 }
 
