--- a/src/App.css
+++ b/src/App.css
@@ -71,32 +71,29 @@ nav h5 {
   -webkit-appearance: none;
 }
 /* HOME */
-.slides .slick-prev,
-.slides .slick-next {
-  position: absolute;
-  top: 50%;
-  z-index: 1;
+.home-page-bottom{
+  flex-direction: column;
+  align-items: flex-end; 
+  justify-content: flex-end; 
 }
 
-
-.slides {
-  position: relative;
+#itadori{
+  position: fixed;
+  bottom: 0;
+  width: 15%;
+  align-self: flex-end;
 }
 
-.slides .slick-prev,
-.slides .slick-next {
-  position: absolute;
-  top: 50%;
-  z-index:1;
+.footer{
+  width: 100em;
+  display: flex;
+  background: rgb(66, 59, 157);
+  height: 8em;
+  position: fixed;
+  bottom: 0;
+  flex-direction: column;
 }
 
-.slides .slick-prev {
-  left: 5%;
-}
-
-.slides .slick-next {
-  right: 5%;
-}
 
 /* TopAnime */
 .container {
@@ -195,3 +192,4 @@ nav h5 {
   width: 20em;
   margin-top: 1em;
 }
+
