--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ nav h5 {
   width: 100%;
   height: 10em;
   position: relative;
-  background: url('https://image.shutterstock.com/image-illustration/abstract-purple-black-gradient-wall-260nw-1569111835.jpg');
+  background: url('https://media.istockphoto.com/photos/abstract-gradient-dark-purple-background-gradient-dark-purple-color-picture-id1162940297?k=6&m=1162940297&s=170667a&w=0&h=TfNcfl6YLYHCP3jDba8KewS39EUBJrgJ34uebjSjHvk=');
   bottom: 0;
   overflow: hidden;
 }
